--- a/modules/wcb/ChangeLog
+++ b/modules/wcb/ChangeLog
@@ -1,3 +1,7 @@
+2025-06-10  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Wcb 4.2.
+
 2025-05-21  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 4.2.
