--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,7 @@
+2025-06-10  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Mentry 4.5.
+
 2025-05-21  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 4.5.
