--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2025-06-10 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.6.
+
 2025-05-16 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 7.6.
