--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,7 @@
+2025-06-10  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Scrollutil 2.6.
+
 2025-06-07  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* README.txt:  Updated to reflect the changes.
