--- a/modules/tsw/ChangeLog
+++ b/modules/tsw/ChangeLog
@@ -1,3 +1,7 @@
+2025-06-10  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tsw 1.1.
+
 2025-05-17  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 1.1.
