--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2025-08-11 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.7.
+
 2025-07-01 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 7.7.
