--- a/modules/tsw/CHANGES.txt
+++ b/modules/tsw/CHANGES.txt
@@ -1,5 +1,24 @@
-What is new in Tsw 1.2?
+What is new in Tsw 1.3?
 -----------------------
+
+1. Significantly improved the element creation:  Tsw now creates the
+   trough and slider elements with the aid of generic procedures for
+   arbitrary themes and theme-specific ones for a few built-in themes.
+
+2. Added plugin capability:  Applications can now add explicit support
+   for any theme by providing an appropriate command of the name
+   "tsw::createElements_$theme".
+
+3. Added support for the "-class" and "-style" configuration options.
+
+4. Extended the description of the "-size" option in the reference
+   manual by a detailed description of the dependency between the
+   "-size" and "-style" options.
+
+5. Added a detailed "STYLING OPTIONS" section to the reference manual.
+
+What was new in Tsw 1.2?
+------------------------
 
 1. Added explicit support for the "droid" theme, which is the default
    in AndroWish, as well as for the themes "awarc", "awbreeze",
