--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2025-10-22 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.8.
+
 2025-10-16 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 7.8.
