--- a/modules/tsw/ChangeLog
+++ b/modules/tsw/ChangeLog
@@ -1,3 +1,7 @@
+2025-10-22  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tsw 1.3.
+
 2025-10-10  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 1.3.
