--- a/modules/widget/ChangeLog
+++ b/modules/widget/ChangeLog
@@ -1,3 +1,9 @@
+2025-11-07 Harald Oehlmann
+
+	* calendar.tcl: [Bug c800a75eb5]: Fix error due to tcl 9
+	  clock scan validation default to on (what is ok).
+	  Thanks Mark for the report and Emiliano for the patch.
+
 2020-02-09  0.7  <andreas_kupries@users.sourceforge.net>
 
 	*
