--- a/modules/ico/ChangeLog
+++ b/modules/ico/ChangeLog
@@ -1,3 +1,7 @@
+2025-11-07 Harald Oehlmann
+	* ico.tcl: [bug 9b8d7fa5bd3470b8] fix icon not decodable
+	  error. Thanks to Torsten for the report and fix.
+
 2020-02-09  0.7  <andreas_kupries@users.sourceforge.net>
 
 	*
