--- a/modules/tablelist/CHANGES.txt
+++ b/modules/tablelist/CHANGES.txt
@@ -1,5 +1,32 @@
-What is new in Tablelist 7.8?
+What is new in Tablelist 7.9?
 -----------------------------
+
+1. The scrolling with the mouse wheel or touchpad is now disabled while
+   the menu of a (ttk::)menubutton or the listbox component of a
+   combobox used for interactive cell editing is posted (thanks to Steve
+   Landers for his proposal).
+
+2. The wide spinbox package wsb now highlights the up and down arrows
+   when they are in pressed state.
+
+3. Added the helper procedure "tablelist::getScalingPct", which returns
+   the application's scaling percentage, derived from Tk's current
+   scaling factor given by [tk scaling].  See the new section "The
+   Procedure tablelist::getScalingPct" in Tablelist Programmer's Guide
+   for details).
+
+4. The sizes of the GUI components created by the packages Tablelist,
+   themepatch, and wsb now depend not only on the display's scaling
+   level, but also on Tk's scaling factor given by [tk scaling] (thanks
+   to Harald Oehlmann for discussions on this subject).
+
+5. Updated the details regarding the value of "tablelist::scalingpct"
+   for GNOME on Wayland and KDE Plasma on Wayland in Tablelist
+   Programmer's Guide, to reflect the changes made in recent versions of
+   these desktops.
+
+What was new in Tablelist 7.8?
+------------------------------
 
 1. Support for interactive cell editing with the aid of the
    ttk::toggleswitch widget (which was added to the core in Tk 9.1a1).
