--- a/modules/tsw/ChangeLog
+++ b/modules/tsw/ChangeLog
@@ -1,3 +1,23 @@
+2025-12-11  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* *.tcl:         Bumped the version number to 1.4.
+	* COPYRIGHT.txt:
+	* README.txt:
+
+	* CHANGES.txt: Updated to reflect the changes.
+	* doc/*.html:
+
+	* scripts/*.tcl: The dimensions of the trough and slider elements now
+	  depend also on Tk's scaling factor given by [tk scaling]; taken into
+	  account that for some earlier macOS versions a reliable handling of
+	  appearance changes requires a small delay.
+
+	* scripts/tclIndex: Newly generated.
+
+	* utils: Removed scaleutil.tcl and renamed utils to mwutil.
+
+	* mwutil/pkgIndex.tcl: Updated to reflect the removal of scaleutil.tcl.
+
 2025-10-22  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Released Tsw 1.3.
