--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2026-01-06 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.9.
+
 2025-12-10 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 7.9.
