--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,7 @@
+2026-01-06  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Scrollutil 2.8.
+
 2025-12-10  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 2.8.
