--- a/modules/tsw/ChangeLog
+++ b/modules/tsw/ChangeLog
@@ -1,3 +1,7 @@
+2026-01-06  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tsw 1.4.
+
 2025-12-11  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 1.4.
